# doc-aura-agent

./: .gitignore  DOCUMENTATION_STANDARDS.md  README.md  documentation list.md  interactive graph.md  package-lock.json  prd.md
apps/backend/: README.md  pyproject.toml
apps/backend/.aura/checkouts/1/1/repo/: COMPREHENSIVE_STOCK_ANALYSIS_REPORT.md  README.md  (+1 more)
apps/backend/aura_backend/: config.py  db.py  deps.py  logging_config.py  main.py  main_state.py  models.py  schemas.py
apps/backend/aura_backend/analysis/: aggregators.py  doc_types.py  docs.py  extractors.py  graph.py  ingestion_bridge.py  pipeline.py  snapshot.py  types.py  utils.py
apps/backend/aura_backend/analysis/agents/: __init__.py  clients.py  context.py  dashboard.py  doc_updater.py  docs_chat.py  embedding.py  models.py  narrator.py  orchestrator.py  parsing.py  planner.py  pr_reviewer.py  repo_analyst.py  verifier.py  vlm_context.py  writers.py
apps/backend/aura_backend/analysis/ingestion/: __init__.py  models.py  parser.py
apps/backend/aura_backend/analysis/ingestion/languages/: __init__.py  registry.py  spec.py
apps/backend/aura_backend/routes/: analysis.py  auth.py  github.py  users.py  webhooks.py
apps/backend/aura_backend/services/: auth.py  github.py  github_app.py  github_oauth.py  github_prs.py  post_merge.py  pr_analysis.py  pr_orchestrator.py  queue.py  shadow_pr.py
apps/backend/tests/: test_agents.py  test_api.py  test_pr_workflow.py
apps/mcp_server/: .mcp.json  README.md  __init__.py  __main__.py  _state.py  fts.py  pyproject.toml  run.sh  server.py
apps/mcp_server/.claude-plugin/: plugin.json
apps/mcp_server/tools/: __init__.py  _helpers.py  get_dependents.py  get_doc.py  get_impact.py  get_symbol.py  search_docs.py
(+69 files in other folders)
