[project]
name = "aura-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.1",
  "pydantic>=2.8",
  "httpx>=0.27",
  "PyJWT>=2.9",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "networkx>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
