[project]
name = "aura-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.1",
  "pydantic>=2.8",
  "httpx>=0.27",
  "PyJWT>=2.9",
  "bcrypt>=4.1",
  "email-validator>=2.1",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "networkx>=3.3",
  "tree-sitter>=0.25",
  "tree-sitter-language-pack==1.6.2",
  "pathspec>=0.12",
  "gitpython>=3.1",
  "tenacity>=9.0",
  "numpy>=1.26",
  "structlog>=24.0",
  "mcp[cli]>=1.0",
  "langgraph>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
