[project]
name = "aura-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.1",
  "numpy>=1.26",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
